Fixed scrollbar issue on login page

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,7 +2,6 @@
   background-image: url("src/assets/img/login.jpg"); 
   background-attachment: fixed;
   background-size: cover;
-  min-height: 1000px;
 } 
 
 @font-face {
